--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,85 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
 }
 
+a {
+  text-decoration: none;
+  color: grey;
+}
+
+.App {
+  width: 55%;
+  height: auto;
+  text-align: center;
+  margin: auto;
+}
+
+.nav-header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  column-gap: 0.75rem;
+  margin: 1rem auto;
+  padding: 1rem 2rem;
+
+  color: #fff;
+  background-color: #F55A5A;
+}
+
+.header-title {
+  padding-bottom: 0.25rem;
+}
+
+.card {
+  display: flex;
+  column-gap: 1rem;
+  margin: 1rem 2rem 3rem 1rem;
+  text-align: left;
+}
+
+.card-image {
+  margin-left: 2rem;
+}
+
+.location-icon {
+  width: 10px;
+  height: auto;
+  margin-right: 0.5rem;
+}
+
+.card-city {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 12px;
+  letter-spacing: 0.17em;
+}
+
+.grey {
+  text-decoration: underline;
+  color: grey;
+  margin-left: 0.5rem;
+}
+
+.card-title {
+  font-size: 30px;
+  font-weight: 700;
+  margin: 0.5rem 0 1rem 0;
+}
+
+.card-date {
+  font-weight: 600;
+  font-size: 16px;
+}
+
+.card-desc {
+  font-size: 16px;
+  margin-top: 6px;
+
+  color: #000;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
